# Project_CVE

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  apirequirements.txt  config.yaml  eda.ipynb  librarychoice.md  pyproject.toml  reqsversions.txt  requirements.txt  run_ingestion.sh
data/traintest/: feature_metadata.joblib  preprocessor.joblib
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: app.py  requirements.txt
models/: logistic_regression_model.pkl
notebooks/: EDA.ipynb
project/: __init__.py  batch.py  config.py  config_loader.py  dataset.py  features.py  pg.py  plots.py  process.py  process_cve.py  test_api.py
project/app/: main.py  schemas.py
project/app/api/: routers.py
project/app/config/: config.py
project/modeling/: LRmodel.py  predict.py  train.py
project/pdpipeline/: batch.py  bigqueryscript.py  config.py  dataset.py  ingest.py  mlpipeline.py  process.py  process_cve.py
project/plpipeline/: etl.py  extract.py  plconfig.py
