[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_cve"
version = "0.0.1"
description = "Cyber Risk Assessment Platform"
authors = [
  { name = "Alexander Oh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["project_cve"]
include = ["pyproject.toml", "project_cve/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project_cve"]
force-sort-within-sections = true

